--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "env-cmd -f ./.env nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "env-cmd -f ./.env nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
