--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "env-cmd -f ./.env nodemon ./bin/www"
+    "pro": "env-cmd -f ./.env nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
